aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g-bank-api-deployment
  labels:
    app: g-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: g-bank-api
  template:
    metadata:
      labels:
        app: g-bank-api
    spec:
      containers:
      - name: g-bank-api
        image: 364141850470.dkr.ecr.eu-west-3.amazonaws.com/g-bank:c057a431af5513a2b90a11d3294f93acc113eb61:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
