aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-bank-api-service
spec:
  selector:
    app: g-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
